--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Portfolio-Payal Malaghe</title>
 </head>
 <body>
-    <h1>Hello </h1>
+ <nav id="Desktop-nav" >
+    <div class="logo">Payal Malaghe</div>
+    <div>
+        <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#Experience">Experience</a></li>
+            <li><a href="#Projects">Projects</a></li>
+            <li><a href="#Contact">Contact</a></li>
+        </ul>
+        
+    </div>
+ </nav>
     <script src="script.js"></script>
 </body>
 </html>
